Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-17970

ReactOS x64: Processor Identifier is not correct

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • 0.4.15
    • NTCore

    Description

      If you install ReactOS x64 bootcd, you can notice identifier is not correct, for example when running set PROC in the command prompt:

      PROCESSOR_ARCHITECTURE=AMD64
      PROCESSOR_IDENTIFIER=x86 Family 6 Model 14 Stepping 10, GenuineIntel
      PROCESSOR_LEVEL=6
      PROCESSOR_REVISION=0e0a
      

      Identifier must start with EM64T in the case of Intel processor.

      Also you can test this on livecd, but you'll have to check registry instead (HKLM\HARDWARE).

      Attachments

        Issue Links

          Activity

            People

              binarymaster Stas'M
              binarymaster Stas'M
              Votes:
              1 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: