[NTOS:KE/x64] Detect CPU vendor properly and store value in PRCB

Also generate processor identifier properly based on this value
on the Configuration Manager machine-dependent initialization.

Update processor driver INF file accordingly.

CORE-17970 CORE-14922